--- a/Audalyzer/project.properties
+++ b/Audalyzer/project.properties
@@ -4,9 +4,11 @@
 # This file must be checked in Version Control Systems.
 #
 # To customize properties used by the Ant build system use,
-# "build.properties", and override values to adapt the script to your
+# "ant.properties", and override values to adapt the script to your
 # project structure.
 
+# Indicates whether an apk should be generated for each density.
+split.density=false
+android.library.reference.1=../HermitAndroid/
 # Project target.
 target=android-8
-android.library.reference.1=../HermitAndroid
